test/conformance/kuttl/verifyImages/clusterpolicy/standard/rollback-image-verification/02-resource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- deployment_old.yaml
- deployment_new.yaml
assert:
- deployment-assert.yaml
