test/conformance/kuttl/verifyImages/clusterpolicy/standard/rollback-image-verification/03-test.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - command: kubectl -n verify-images rollout undo deployment nginx-deployment
    namespaced: true
