test/conformance/kuttl/verifyImages/clusterpolicy/standard/rollback-image-verification/policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: verify-images
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: check-image
      match:
        any:
        - resources:
            kinds:
              - Deployment
      verifyImages:
      - imageReferences:
        - "ghcr.io/hackeramitkumar*"
        attestors:
        - count: 1
          entries:
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEFN8gGjQua2g8N+aLx3Eff+/j5HxL
[...]
                -----END PUBLIC KEY-----
