test/conformance/kuttl/verifyImages/clusterpolicy/standard/rollback-image-verification/deployment-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: verify-images
